// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MonitorView snapshot > filters by direction when the RX filter is active 1`] = `
"<section class="card monitor-card">
  <div class="card-head">
    <h2>MIDI monitor</h2>
    <div class="row gap">
      <div class="seg"><button class="seg-btn">All</button><button class="seg-btn active">RX</button><button class="seg-btn">TX</button></div><label class="row small muted"><input type="checkbox"> auto-scroll </label><button class="btn btn-small">Clear</button>
    </div>
  </div>
  <div class="monitor-list mono">
    <!--v-if-->
    <section class="device-group">
      <header class="group-head"><span class="group-name">Chocolate Plus</span><span class="muted small">1 messages · last at 22:13:20.000</span></header>
      <div class="msg">
        <div class="msg-head"><span class="tag tag-rx">RX</span><span class="muted small">22:13:20.000</span><span class="muted small">7 bytes</span></div>
        <div class="msg-body">
          <div class="hex-row"><span class="hex-offset">0000</span><span class="hex-cell">f0</span><span class="hex-cell">00</span><span class="hex-cell">32</span><span class="hex-cell">45</span><span class="hex-cell">58</span><span class="hex-cell">01</span><span class="hex-cell">f7</span></div>
        </div>
      </div>
    </section>
  </div>
</section>"
`;

exports[`MonitorView snapshot > groups a full, multi-device stream into runs (newest first) 1`] = `
"<section class="card monitor-card">
  <div class="card-head">
    <h2>MIDI monitor</h2>
    <div class="row gap">
      <div class="seg"><button class="seg-btn active">All</button><button class="seg-btn">RX</button><button class="seg-btn">TX</button></div><label class="row small muted"><input type="checkbox"> auto-scroll </label><button class="btn btn-small">Clear</button>
    </div>
  </div>
  <div class="monitor-list mono">
    <!--v-if-->
    <section class="device-group">
      <header class="group-head"><span class="group-name">Chocolate Plus</span><span class="muted small">1 messages · last at 22:13:23.000</span></header>
      <div class="msg">
        <div class="msg-head"><span class="tag tag-rx">RX</span><span class="muted small">22:13:23.000</span><span class="muted small">34 bytes</span></div>
        <div class="msg-body">
          <div class="hex-row"><span class="hex-offset">0000</span><span class="hex-cell">f0</span><span class="hex-cell">00</span><span class="hex-cell">32</span><span class="hex-cell">0d</span><span class="hex-cell">49</span><span class="hex-cell">3f</span><span class="hex-cell">00</span><span class="hex-cell">00</span><span class="hex-cell">02</span><span class="hex-cell">00</span><span class="hex-cell">00</span><span class="hex-cell">00</span><span class="hex-cell">00</span><span class="hex-cell">00</span><span class="hex-cell">10</span><span class="hex-cell">7e</span></div>
          <div class="hex-row"><span class="hex-offset">0010</span><span class="hex-cell">00</span><span class="hex-cell">00</span><span class="hex-cell">03</span><span class="hex-cell">01</span><span class="hex-cell">05</span><span class="hex-cell">01</span><span class="hex-cell">0a</span><span class="hex-cell">00</span><span class="hex-cell">14</span><span class="hex-cell">01</span><span class="hex-cell">1e</span><span class="hex-cell">00</span><span class="hex-cell">28</span><span class="hex-cell">01</span><span class="hex-cell">32</span><span class="hex-cell">ab</span></div>
          <div class="hex-row"><span class="hex-offset">0020</span><span class="hex-cell">cd</span><span class="hex-cell">00</span></div>
        </div>
      </div>
    </section>
    <section class="device-group">
      <header class="group-head"><span class="group-name">Other Midi</span><span class="muted small">1 messages · last at 22:13:22.000</span></header>
      <div class="msg">
        <div class="msg-head"><span class="tag tag-rx">RX</span><span class="muted small">22:13:22.000</span><span class="muted small">7 bytes</span></div>
        <div class="msg-body">
          <div class="hex-row"><span class="hex-offset">0000</span><span class="hex-cell">f0</span><span class="hex-cell">00</span><span class="hex-cell">32</span><span class="hex-cell">45</span><span class="hex-cell">58</span><span class="hex-cell">02</span><span class="hex-cell">f7</span></div>
        </div>
      </div>
    </section>
    <section class="device-group">
      <header class="group-head"><span class="group-name">Chocolate Plus</span><span class="muted small">2 messages · last at 22:13:21.000</span></header>
      <div class="msg">
        <div class="msg-head"><span class="tag tag-tx">TX</span><span class="muted small">22:13:21.000</span><span class="muted small">5 bytes</span></div>
        <div class="msg-body">
          <div class="hex-row"><span class="hex-offset">0000</span><span class="hex-cell">f0</span><span class="hex-cell">00</span><span class="hex-cell">32</span><span class="hex-cell">0d</span><span class="hex-cell">41</span></div>
        </div>
      </div>
      <div class="msg">
        <div class="msg-head"><span class="tag tag-rx">RX</span><span class="muted small">22:13:20.000</span><span class="muted small">7 bytes</span></div>
        <div class="msg-body">
          <div class="hex-row"><span class="hex-offset">0000</span><span class="hex-cell">f0</span><span class="hex-cell">00</span><span class="hex-cell">32</span><span class="hex-cell">45</span><span class="hex-cell">58</span><span class="hex-cell">01</span><span class="hex-cell">f7</span></div>
        </div>
      </div>
    </section>
  </div>
</section>"
`;

exports[`MonitorView snapshot > renders a single RX message with hex rows 1`] = `
"<section class="card monitor-card">
  <div class="card-head">
    <h2>MIDI monitor</h2>
    <div class="row gap">
      <div class="seg"><button class="seg-btn active">All</button><button class="seg-btn">RX</button><button class="seg-btn">TX</button></div><label class="row small muted"><input type="checkbox"> auto-scroll </label><button class="btn btn-small">Clear</button>
    </div>
  </div>
  <div class="monitor-list mono">
    <!--v-if-->
    <section class="device-group">
      <header class="group-head"><span class="group-name">Chocolate Plus</span><span class="muted small">1 messages · last at 22:13:20.000</span></header>
      <div class="msg">
        <div class="msg-head"><span class="tag tag-rx">RX</span><span class="muted small">22:13:20.000</span><span class="muted small">7 bytes</span></div>
        <div class="msg-body">
          <div class="hex-row"><span class="hex-offset">0000</span><span class="hex-cell">f0</span><span class="hex-cell">00</span><span class="hex-cell">32</span><span class="hex-cell">45</span><span class="hex-cell">58</span><span class="hex-cell">01</span><span class="hex-cell">f7</span></div>
        </div>
      </div>
    </section>
  </div>
</section>"
`;

exports[`MonitorView snapshot > shows everything again after filtering back to All 1`] = `
"<section class="card monitor-card">
  <div class="card-head">
    <h2>MIDI monitor</h2>
    <div class="row gap">
      <div class="seg"><button class="seg-btn active">All</button><button class="seg-btn">RX</button><button class="seg-btn">TX</button></div><label class="row small muted"><input type="checkbox"> auto-scroll </label><button class="btn btn-small">Clear</button>
    </div>
  </div>
  <div class="monitor-list mono">
    <!--v-if-->
    <section class="device-group">
      <header class="group-head"><span class="group-name">Chocolate Plus</span><span class="muted small">2 messages · last at 22:13:21.000</span></header>
      <div class="msg">
        <div class="msg-head"><span class="tag tag-tx">TX</span><span class="muted small">22:13:21.000</span><span class="muted small">5 bytes</span></div>
        <div class="msg-body">
          <div class="hex-row"><span class="hex-offset">0000</span><span class="hex-cell">f0</span><span class="hex-cell">00</span><span class="hex-cell">32</span><span class="hex-cell">0d</span><span class="hex-cell">41</span></div>
        </div>
      </div>
      <div class="msg">
        <div class="msg-head"><span class="tag tag-rx">RX</span><span class="muted small">22:13:20.000</span><span class="muted small">7 bytes</span></div>
        <div class="msg-body">
          <div class="hex-row"><span class="hex-offset">0000</span><span class="hex-cell">f0</span><span class="hex-cell">00</span><span class="hex-cell">32</span><span class="hex-cell">45</span><span class="hex-cell">58</span><span class="hex-cell">01</span><span class="hex-cell">f7</span></div>
        </div>
      </div>
    </section>
  </div>
</section>"
`;

exports[`MonitorView snapshot > shows the empty state 1`] = `
"<section class="card monitor-card">
  <div class="card-head">
    <h2>MIDI monitor</h2>
    <div class="row gap">
      <div class="seg"><button class="seg-btn active">All</button><button class="seg-btn">RX</button><button class="seg-btn">TX</button></div><label class="row small muted"><input type="checkbox"> auto-scroll </label><button class="btn btn-small">Clear</button>
    </div>
  </div>
  <div class="monitor-list mono">
    <p class="muted empty">No MIDI traffic yet.</p>
  </div>
</section>"
`;
